# plotcpp

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md
apps/: CMakeLists.txt  animation.cpp  animation_widget.cpp  figure.cpp  plot.cpp  sin.cpp
cmake/: FindSphinx.cmake  plotcppConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt  animation.cpp  animation_widget.cpp  colors.cpp  figure.cpp  plot_widget.cpp  sin.cpp  text.cpp
include/plotcpp/: animation.hpp  animation_widget.hpp  figure.hpp  items.hpp  plotables.hpp  plotcpp.hpp  plotwidget.hpp  plotwrapper.hpp  shapes.hpp  ui_figure.hpp  utils.hpp
src/: CMakeLists.txt  animation.cpp  animation_widget.cpp  figure.cpp  items.cpp  plotables.cpp  plotwidget.cpp  plotwrapper.cpp  shapes.cpp  utils.cpp
ui/: figure.ui
